# chain-chat

./: .dockerignore  .env  .env.example  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  Dockerfile.test  README.md  TODO.md  docker-compose.override.yml.example  docker-compose.test.yml  docker-compose.yml
.cargo/: config.toml
.github/workflows/: general.yml  publish.yml
.sqlx/: query-1b0be763820c5bc135104f6f7057c4882649ceff469a884732d350752888510f.json  query-32df02a44bfa9f2a9b17748db02a22c928884a2911260f7874409a068b33d215.json  query-4b3ca575ca2f76cd4d9af4a90ff4fe2385ff16140c0d7ed8973961e56627b3e7.json  query-4e28c683cee168123699ea722a76c4c7e3bc17ddb343210bc68441271638c4cd.json  query-745bbe106ab5f8e1e89e5cf416f2648fe7149c1e81bfcb62142928bd834bbd46.json  query-961d221b4198b056cb416cca06f510c663277f1a6f796fc41381b1cdaac00bd4.json  query-ab1e8feed8c38e0620572748669852ef0944009a61e1731e8b9b592b90f33d88.json  query-b32a925ca3cf4c00543469092e0e49bf070266803864fcca86e2e04dd63bc947.json  query-d090829f8ac4d227eb027a3d016e7c4923c047eb201091871bff93914b7a972c.json  query-f6713f504471c58873330fef72103cc6c581f849ef90022980f388f7b070cd6b.json  query-fc1f733cb88f21e3023533b057f7bcc4ecfe1c71fdd3052543c343e8d4e71124.json
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20240901004522_create_user_table.sql  20250117204253_alter_username_to_email.sql
scripts/: init.py  init_db.py  init_redis.py  requirements.txt
src/: auth.rs  configuration.rs  database.rs  error.rs  lib.rs  main.rs  middleware.rs  session.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: password.rs
src/cryptografic/: cookie.rs  mod.rs  password.rs
src/database/: init.rs  mod.rs  users.rs
src/domain/: messages.rs  mod.rs  user.rs
src/routes/: errors.rs  favicon.rs  (+3 more)
templates/: base.html  error.html  home.html  login.html
tests/: helpers.rs
(+43 files in other folders)
