[package]
name = "chain-chat"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "chain-chat"

[dependencies]
tokio = { version ="1.39.3", features = ["macros", "rt-multi-thread"] }
# Errors
anyhow = "1.0.86"
# Tracing / Log
tracing = { version = "0.1.40", features = ["log", "attributes"] }
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter", "json"] }
tracing-log = "0.2.0"
tracing-appender = "0.2.3"
tracing-actix-web = "0.7.11"
