[package]
name = "chain-chat"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "chain-chat"

[dependencies]
tokio = { version = "1.39.3", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.208", features  = ["derive"] }
serde_json = "1.0.128"
tera = "1.20.0"

actix-web = "4.9.0"
actix-session = { version = "0.10.1", features = ["redis-session-rustls"] }
# Configuration
config = "0.14.0"
dotenv = "0.15.0"
# Cryptografic
secrecy = { version = "0.8.0", features = ["serde"] }
uuid = { version = "1.10.0", features = ["v4", "serde"] }
argon2 = { version = "0.5.3", features = ["std"] }
rand = { version = "0.8.5", features = ["std_rng"] }
# Errors
anyhow = "1.0.86"
# Tracing / Logs
tracing = { version = "0.1.40", features = ["log", "attributes"] }
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter", "json"] }
tracing-log = "0.2.0"
tracing-appender = "0.2.3"

[dependencies.reqwest]
version = "0.12.7"
default-features = false
features = ["cookies"]

[dependencies.sqlx]
version = "0.8.1"
default-features = false
features = [
  "macros",
  "mysql",
  "migrate",
  "uuid",
  "chrono",
  "runtime-tokio-rustls"
]

[dev-dependencies]
fake = "2.9.2"
